--- a/style.css
+++ b/style.css
@@ -1,28 +1,33 @@
-/* style.css */
+@keyframes gradientAnimation {
+    0% { background-position: 0% 50%; }
+    50% { background-position: 100% 50%; }
+    100% { background-position: 0% 50%; }
+}
 
-*{
+* {
     text-align: center;
-    font-family: Roboto Mono;
+    font-family: 'Roboto Mono', monospace;
 }
 
 body {
-
-    background-color: #f0f0f0;
-    color: #333;
+    background: linear-gradient(to right, #1f2731, rgb(10, 53, 31)); 
+    background-size: 200% auto;
+    animation: gradientAnimation 10s ease infinite; 
+    color: #fff;
     margin: 0;
     padding: 20px;
     align-items: center;
 }
 
 h1 {
-    color: #4CAF50;
+    color: rgb(25, 190, 108);
     font-size: 24px;
 }
 
 p {
     font-size: 18px;
+    color: #ccc;
 }
-
 
 input[type="number"], button {
     width: 15%;
@@ -30,11 +35,14 @@ input[type="number"], button {
     margin: 10px 0;
     border: 2px solid #ccc;
     border-radius: 4px;
+    background-color: #333;
+    color: #fff;
 }
 
 button {
-    background-color: #4CAF50;
-    color: white;
+    width: auto;
+    background-color: rgb(25, 190, 108);
+    color: #fff;
     border: none;
 }
 
@@ -45,5 +53,5 @@ button:hover {
 i {
     margin: 0 10px;
     font-size: 24px;
-    color: #4CAF50;
+    color: rgb(25, 190, 108);
 }
